[package]
name = "urouter"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ivabus/urouter"
description = "Small router for (kinda) short domains (fork of ivabus/aliurl without REST API)"


[dependencies]
rocket = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url-escape = "0.1.1"
smurf = "0.3.0"
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.10.2"
