[package]
name = "urouter"
version = "0.6.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ivabus/urouter"
description = "Small HTTP router"


[dependencies]
rocket = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url-escape = "0.1.1"
smurf = "0.3.0"
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.10.2"
ureq = { version = "2.9.1", features = ["brotli", "native-certs"] }
users = "0.11.0"