[package]
name = "urouter"
version = "0.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ivabus/urouter"
description = "Small HTTP router"


[dependencies]
rocket = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
url-escape = "0.1.1"
once_cell = "1.19"
clap = { version = "4.5.3", features = ["derive"] }
regex = "1.10.3"
ureq = { version = "2.9.6", features = ["brotli", "native-certs"] }
users = "0.11.0"
